--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,19 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
+  padding: 0 2rem;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  background-color: blue;
+}
+
+.map {
+  background-color: red;
+  flex: 1;
+}
+
+.start {
+  background-color: green;
+  flex: 1;
 }
 
 .main {
